BST LC Practice, Misc
Updated iterative inorder to a much simplified version

--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -22,7 +22,7 @@
    },
    "outputs": [],
    "source": [
-    "from typing import List, Optional\n",
+    "from typing import List, Optional, Generator\n",
     "import pandas as pd\n",
     "import numpy as np\n",
     "import sqlite3\n",
@@ -4121,6 +4121,7 @@
      "iopub.status.idle": "2024-04-17T16:25:31.029908Z",
      "shell.execute_reply": "2024-04-17T16:25:31.029137Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.038271,
      "end_time": "2024-04-17T16:25:31.031596",
@@ -4152,6 +4153,153 @@
     "assert smallestFromLeaf(BinaryTreeNode.from_array([2,2,1,None,1,0,None,0])) == \"abc\"\n",
     "assert smallestFromLeaf(BinaryTreeNode.from_array([4,0,1,1])) == \"bae\"\n",
     "assert smallestFromLeaf(BinaryTreeNode.from_array([25,1,None,0,0,1,None,None,None,0])) == \"ababz\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0938e6bc",
+   "metadata": {},
+   "source": [
+    "Island Permeter: https://leetcode.com/problems/island-perimeter/submissions/1235424369/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "003c3125",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def islandPerimeter(grid: list[list[int]]) -> int:\n",
+    "    \"Time: O(MN), Space: O(1)\"\n",
+    "    N, M = len(grid), len(grid[0])\n",
+    "    perimeter: int = 0\n",
+    "    for i in range(N):\n",
+    "        for j in range(M):\n",
+    "            if grid[i][j] == 1:\n",
+    "                perimeter += i == 0 or grid[i - 1][j] == 0\n",
+    "                perimeter += j == 0 or grid[i][j - 1] == 0\n",
+    "                perimeter += i == N - 1 or grid[i + 1][j] == 0\n",
+    "                perimeter += j == M - 1 or grid[i][j + 1] == 0\n",
+    "\n",
+    "    return perimeter\n",
+    "\n",
+    "# Testing the Solution\n",
+    "assert islandPerimeter([[0,1,0,0],[1,1,1,0],[0,1,0,0],[1,1,0,0]]) == 16"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c9452394",
+   "metadata": {},
+   "source": [
+    "Predecessor And Successor In BST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "88e2210d",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def predecessorSuccessorBrute(root: BinaryTreeNode, key: int):\n",
+    "    \"Time: O(N), Space: O(N)\"\n",
+    "    inorder: list[int] = []\n",
+    "    stack: list[BinaryTreeNode] = []\n",
+    "    curr = root\n",
+    "    while stack or curr:\n",
+    "        if curr:\n",
+    "            stack.append(curr)\n",
+    "            curr = curr.left\n",
+    "        else:\n",
+    "            curr = stack.pop()\n",
+    "            inorder.append(curr.val)\n",
+    "            curr = curr.right\n",
+    "\n",
+    "    # Find the Idx where the element can go, it may or may not exist.\n",
+    "    inorder = [-1, *inorder, -1]\n",
+    "    N = len(inorder)\n",
+    "    low, high = 1, N - 2\n",
+    "    while low <= high:\n",
+    "        idx = (low + high) // 2\n",
+    "        if inorder[idx] == key:\n",
+    "            return inorder[idx - 1], inorder[idx + 1]\n",
+    "        if inorder[idx] < key:\n",
+    "            low = idx + 1\n",
+    "        else:\n",
+    "            high = idx - 1\n",
+    "    else:\n",
+    "        return inorder[low - 1], inorder[low]\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert predecessorSuccessorBrute(BinaryTreeNode.from_array([2, 1, 3]), 2) == (1, 3)\n",
+    "assert predecessorSuccessorBrute(BinaryTreeNode.from_array([2, 1, 3]), 1) == (-1, 2)\n",
+    "assert predecessorSuccessorBrute(BinaryTreeNode.from_array([2, 1, 3]), 3) == (2, -1)\n",
+    "assert predecessorSuccessorBrute(BinaryTreeNode.from_array([2, 1, 3]), 4) == (3, -1)\n",
+    "assert predecessorSuccessorBrute(BinaryTreeNode.from_array([2, 1, 3]), 0) == (-1, 1)\n",
+    "assert predecessorSuccessorBrute(BinaryTreeNode.from_array([2, 0, 3]), 1) == (0, 2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2b775761",
+   "metadata": {},
+   "source": [
+    "Binary Search Tree Iterator: https://leetcode.com/problems/binary-search-tree-iterator/submissions/1235796453 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b544b45",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class BSTIterator:\n",
+    "        def __init__(self, root: BinaryTreeNode):\n",
+    "\n",
+    "            # Logic to find the max of BST\n",
+    "            self.max_ = -1\n",
+    "            curr = root\n",
+    "            while curr:\n",
+    "                self.max_ = curr.val\n",
+    "                curr = curr.right\n",
+    "\n",
+    "            self.generator = BSTIterator.inorder(root)\n",
+    "            self.prev = -1\n",
+    "\n",
+    "        @staticmethod\n",
+    "        def inorder(curr: BinaryTreeNode) -> Generator[int, None, None]:\n",
+    "            if not curr:\n",
+    "                yield -1\n",
+    "            else:\n",
+    "                yield from BSTIterator.inorder(curr.left)\n",
+    "                yield curr.val\n",
+    "                yield from BSTIterator.inorder(curr.right)\n",
+    "\n",
+    "        def next(self) -> int:\n",
+    "            curr = -1\n",
+    "            while curr == -1:\n",
+    "                curr = next(self.generator)\n",
+    "\n",
+    "            self.prev = curr\n",
+    "            return curr\n",
+    "\n",
+    "        def hasNext(self) -> bool:\n",
+    "            return self.prev < self.max_\n",
+    "\n",
+    "# Testing the solution\n",
+    "bstIter = BSTIterator(BinaryTreeNode.from_array([7,3,15,None,None,9,20]))\n",
+    "temp: list[int] = []\n",
+    "while bstIter.hasNext():\n",
+    "    temp.append(bstIter.next())\n",
+    "\n",
+    "assert temp == [3, 7, 9, 15, 20]"
    ]
   }
  ],
