--- a/study/striver-A2Z/10-trees.ipynb
+++ b/study/striver-A2Z/10-trees.ipynb
@@ -502,17 +502,14 @@
     "    result: list[int] = []\n",
     "    stack: list[BinaryTreeNode] = []\n",
     "    curr = root\n",
-    "    while True:\n",
+    "    while curr or stack:\n",
     "        if curr:\n",
     "            stack.append(curr)\n",
     "            curr = curr.left\n",
     "        else:\n",
-    "            if stack:\n",
-    "                curr = stack.pop()\n",
-    "                result.append(curr.val)\n",
-    "                curr = curr.right\n",
-    "            else:\n",
-    "                break\n",
+    "            curr = stack.pop()\n",
+    "            result.append(curr.val)\n",
+    "            curr = curr.right\n",
     "\n",
     "    return result\n",
     "\n",
