--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -43,11 +43,12 @@
     "    reg = re.compile(expr)\n",
     "    return reg.search(item) is not None\n",
     "\n",
-    "def read_lc_df(s: str) -> pd.DataFrame:\n",
+    "def read_lc_df(s: str, dtypes: dict[str, str]=dict()) -> pd.DataFrame:\n",
     "    temp = pd.read_csv(io.StringIO(s), sep=\"|\", skiprows=2)\n",
     "    temp = temp.iloc[1:-1, 1:-1]\n",
     "    temp.columns = temp.columns.map(str.strip)\n",
     "    temp = temp.map(lambda x: x if type(x) != str else None if x.strip() == 'null' else x.strip())\n",
+    "    temp = temp.astype(dtypes)\n",
     "    return temp\n",
     "\n",
     "conn.create_function(\"REGEXP\", 2, regexp)"
@@ -214,6 +215,42 @@
     "            result.append(curr.val)\n",
     "            curr = curr.next\n",
     "        return result"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "35f93518",
+   "metadata": {},
+   "source": [
+    "#### Utility to generate random BST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "848c43e5",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def generateBST(N: int, min_: int, max_: int) -> BinaryTreeNode|None:\n",
+    "    def insert(curr: BinaryTreeNode|None, n: int) -> BinaryTreeNode:\n",
+    "        if not curr:\n",
+    "            curr = BinaryTreeNode(n)\n",
+    "        elif curr.val < n:\n",
+    "            curr.right = insert(curr.right, n)\n",
+    "        else:\n",
+    "            curr.left = insert(curr.left, n)\n",
+    "\n",
+    "        return curr\n",
+    "\n",
+    "    assert N <= max_ - min_, \"Number of available samples must be >= N\"\n",
+    "    root: BinaryTreeNode|None = None\n",
+    "    for n in np.random.choice(np.arange(min_, max_), size=N, replace=False):\n",
+    "        root = insert(root, n)\n",
+    "\n",
+    "    return root"
    ]
   },
   {
@@ -4319,6 +4356,7 @@
      "iopub.status.idle": "2024-04-18T14:41:32.026738Z",
      "shell.execute_reply": "2024-04-18T14:41:32.026100Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.041311,
      "end_time": "2024-04-18T14:41:32.028362",
@@ -4370,6 +4408,105 @@
     "    temp.append(bstIter.next())\n",
     "\n",
     "assert temp == [3, 7, 9, 15, 20]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b746cac5",
+   "metadata": {},
+   "source": [
+    "Problem Link: https://leetcode.com/problems/recover-binary-search-tree/submissions/1236357794/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "417a1ab3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def recoverTree(root: BinaryTreeNode) -> None:\n",
+    "    \"Time: O(N), Space: O(1)\"\n",
+    "    stack: list[BinaryTreeNode] = []\n",
+    "\n",
+    "    prev: BinaryTreeNode|None = None\n",
+    "    curr: BinaryTreeNode|None = root\n",
+    "    swap1: BinaryTreeNode|None = None\n",
+    "    swap2: BinaryTreeNode|None = None\n",
+    "\n",
+    "    while curr or stack:\n",
+    "        if curr:\n",
+    "            stack.append(curr)\n",
+    "            curr = curr.left\n",
+    "        else:\n",
+    "            curr = stack.pop()\n",
+    "            if not swap1 and prev and curr.val < prev.val:\n",
+    "                swap1 = prev\n",
+    "            elif not swap2 and swap1 and curr.val > swap1.val:\n",
+    "                swap2 = prev\n",
+    "                break\n",
+    "\n",
+    "            prev, curr = curr, curr.right\n",
+    "\n",
+    "    if not swap2:\n",
+    "        swap2 = prev\n",
+    "\n",
+    "    # Swap the values of the two pointers\n",
+    "    if swap1 and swap2:\n",
+    "        swap1.val, swap2.val = swap2.val, swap1.val\n",
+    "\n",
+    "for i in range(3, 50):\n",
+    "    original = generateBST(i, 1, 100).to_list()\n",
+    "    copy = [*original]\n",
+    "    j_, k_ = np.random.choice(range(i), 2, replace=False)\n",
+    "    while not copy[j_] or not copy[k_]:\n",
+    "        j_, k_ = np.random.choice(range(i), 2, replace=False)\n",
+    "    copy[j_], copy[k_] = copy[k_], copy[j_]\n",
+    "    bst = BinaryTreeNode.from_array(copy)\n",
+    "    recoverTree(bst)\n",
+    "    assert bst.to_list() == original"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4ea8e86e",
+   "metadata": {},
+   "source": [
+    "Problem link: https://leetcode.com/problems/rising-temperature/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2e5cf08b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import datetime as dt\n",
+    "def rising_temperature_pandas(weather: pd.DataFrame) -> pd.DataFrame:\n",
+    "    records = dict(zip(weather['recordDate'], weather['temperature']))\n",
+    "    results: list[str] = []\n",
+    "\n",
+    "    for row in weather.itertuples():\n",
+    "        prevDay = row[2] - dt.timedelta(days=1)\n",
+    "        if records.get(prevDay, math.inf) < row[3]:\n",
+    "            results.append(row[1])\n",
+    "\n",
+    "    return pd.DataFrame(data=results, columns=['id'])\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp = read_lc_df(\"\"\"\n",
+    "+----+------------+-------------+\n",
+    "| id | recordDate | temperature |\n",
+    "| -- | ---------- | ----------- |\n",
+    "| 1  | 2000-12-14 | 3           |\n",
+    "| 2  | 2000-12-16 | 5           |\n",
+    "+----+------------+-------------+\n",
+    "\"\"\", dtypes={'recordDate': 'datetime64[ns]', 'temperature': 'float'})\n",
+    "\n",
+    "# temp['temperature'] = temp['temperature'].astype(float)\n",
+    "# temp['recordDate'] = pd.to_datetime(temp['recordDate'])\n",
+    "assert rising_temperature_pandas(temp)['id'].to_list() == []"
    ]
   }
  ],
