--- a/study/striver-A2Z/11-binary-search-trees.ipynb
+++ b/study/striver-A2Z/11-binary-search-trees.ipynb
@@ -906,6 +906,7 @@
      "iopub.status.idle": "2024-04-18T02:45:55.635147Z",
      "shell.execute_reply": "2024-04-18T02:45:55.634406Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.016879,
      "end_time": "2024-04-18T02:45:55.636836",
@@ -947,6 +948,205 @@
     "# Testing the solution\n",
     "assert bstFromPreorderOptimal([8,5,1,7,10,12]).to_list() == [8,5,10,1,7,None,12]\n",
     "assert bstFromPreorderOptimal([1,3]).to_list() == [1,None,3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f916088f",
+   "metadata": {},
+   "source": [
+    "Inorder successor and predecessor of a BST\n",
+    "Video Link: https://youtu.be/SXKAD2svfmI?si=MakIY0IWCvpCbHWB"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1d877037",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def predecessorSuccessor(root: BinaryTreeNode, key: int):\n",
+    "    \"\"\"\n",
+    "    Find the floor, ceil of key.\n",
+    "    Time: O(H), Space: O(1)\n",
+    "    \"\"\"\n",
+    "    # Find LB\n",
+    "    LB, curr = -1, root\n",
+    "    while curr:\n",
+    "        if curr.val < key:\n",
+    "            LB = curr.val\n",
+    "            curr = curr.right\n",
+    "        else:\n",
+    "            curr = curr.left\n",
+    "\n",
+    "    # Find UB\n",
+    "    UB, curr = -1, root\n",
+    "    while curr:\n",
+    "        if curr.val > key:\n",
+    "            UB = curr.val\n",
+    "            curr = curr.left\n",
+    "        else:\n",
+    "            curr = curr.right\n",
+    "\n",
+    "    return LB, UB"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bee8b153",
+   "metadata": {},
+   "source": [
+    "BST Iterator: https://leetcode.com/problems/binary-search-tree-iterator/submissions/1236174700/\n",
+    "Video Link: https://youtu.be/D2jMcmxU4bs?si=D8QZ784vB5u0LLPv"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "350f423a",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "class BSTIterator:\n",
+    "    \"\"\"\n",
+    "    Space: O(H)\n",
+    "    Time: N spread over entire iteration O(N / N) ~ O(1) on average\n",
+    "    \"\"\"\n",
+    "    def __init__(self, root: BinaryTreeNode):\n",
+    "        self.root = root\n",
+    "\n",
+    "        self.stack: list[BinaryTreeNode] = []\n",
+    "        self.populateStack(self.root)\n",
+    "\n",
+    "    def populateStack(self, curr: BinaryTreeNode):\n",
+    "        while curr:\n",
+    "            self.stack.append(curr)\n",
+    "            curr = curr.left\n",
+    "\n",
+    "    def next(self) -> int:\n",
+    "        curr = self.stack.pop()\n",
+    "        if curr.right:\n",
+    "            self.populateStack(curr.right)\n",
+    "\n",
+    "        return curr.val\n",
+    "\n",
+    "    def hasNext(self) -> bool:\n",
+    "        return len(self.stack) > 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "59bb5f1f",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/ssL3sHwPeb4?si=Z4999grCFeuGVqKW\n",
+    "Two Sum IV: BST Input"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3d15c521",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/two-sum-iv-input-is-a-bst/submissions/1236189602/\n",
+    "def findTargetBrute(root: BinaryTreeNode, k: int) -> bool:\n",
+    "    \"Time: O(N * log N), Space: O(1)\"\n",
+    "    def find(target: int) -> bool:\n",
+    "        curr = root\n",
+    "        while curr:\n",
+    "            if curr.val == target:\n",
+    "                return True\n",
+    "            elif curr.val < target:\n",
+    "                curr = curr.right\n",
+    "            else:\n",
+    "                curr = curr.left\n",
+    "        return False\n",
+    "\n",
+    "    queue: list[BinaryTreeNode] = [root]\n",
+    "    while queue:\n",
+    "        curr = queue.pop()\n",
+    "        if curr:\n",
+    "            if curr.val * 2 != k and find(k - curr.val):\n",
+    "                return True\n",
+    "            else:\n",
+    "                queue.append(curr.left)\n",
+    "                queue.append(curr.right)\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findTargetBrute(BinaryTreeNode.from_array([5,3,6,2,4,None,7]), 10) == True\n",
+    "assert findTargetBrute(BinaryTreeNode.from_array([1]), 2) == False"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8a27d83e",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/two-sum-iv-input-is-a-bst/submissions/1236198223/\n",
+    "def findTarget(root: BinaryTreeNode, k: int) -> bool:\n",
+    "    \"\"\"\n",
+    "    Idea is to create a BST Iterator that yields the smallest and largest element respectively.\n",
+    "    Do a two pointer approach to two sum.\n",
+    "\n",
+    "    Time: O(N), Space: O(H)\n",
+    "    \"\"\"\n",
+    "    class BSTIterator:\n",
+    "        def __init__(self, root_: BinaryTreeNode):\n",
+    "            self.root = root_\n",
+    "\n",
+    "            self.stack: list[BinaryTreeNode] = []\n",
+    "            self.populate(self.root, reverse=False)\n",
+    "\n",
+    "            self.rstack: list[BinaryTreeNode] = []\n",
+    "            self.populate(self.root, reverse=True)\n",
+    "\n",
+    "        def populate(self, curr: BinaryTreeNode, reverse: bool):\n",
+    "            while curr:\n",
+    "                if not reverse:\n",
+    "                    self.stack.append(curr)\n",
+    "                    curr = curr.left\n",
+    "                else:\n",
+    "                    self.rstack.append(curr)\n",
+    "                    curr = curr.right\n",
+    "\n",
+    "        def next(self, reverse: bool) -> int:\n",
+    "            curr = self.stack.pop() if not reverse else self.rstack.pop()\n",
+    "            if not reverse and curr.right:\n",
+    "                self.populate(curr.right, reverse)\n",
+    "            elif reverse and curr.left:\n",
+    "                self.populate(curr.left, reverse)\n",
+    "\n",
+    "            return curr.val\n",
+    "\n",
+    "    bstIter = BSTIterator(root)\n",
+    "    l, r = bstIter.next(False), bstIter.next(True)\n",
+    "    while l < r:\n",
+    "        k_ = l + r\n",
+    "        if k_ == k:\n",
+    "            return True\n",
+    "        elif k_ < k:\n",
+    "            l = bstIter.next(False)\n",
+    "        else:\n",
+    "            r = bstIter.next(True)\n",
+    "\n",
+    "    return False\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findTarget(BinaryTreeNode.from_array([5,3,6,2,4,None,7]), 10) == True\n",
+    "assert findTarget(BinaryTreeNode.from_array([1]), 2) == False"
    ]
   }
  ],
