--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -4542,6 +4542,7 @@
      "iopub.status.idle": "2024-04-19T15:53:08.755264Z",
      "shell.execute_reply": "2024-04-19T15:53:08.754605Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.045937,
      "end_time": "2024-04-19T15:53:08.756994",
@@ -4578,6 +4579,36 @@
     "# temp['temperature'] = temp['temperature'].astype(float)\n",
     "# temp['recordDate'] = pd.to_datetime(temp['recordDate'])\n",
     "assert rising_temperature_pandas(temp)['id'].to_list() == []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "42548d2d",
+   "metadata": {},
+   "source": [
+    "Merge two BST: https://leetcode.com/problems/merge-two-binary-trees/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "af67741c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def mergeTrees(root1: BinaryTreeNode, root2: BinaryTreeNode) -> BinaryTreeNode:\n",
+    "    if not root1:\n",
+    "        return root2\n",
+    "    elif not root2:\n",
+    "        return root1\n",
+    "    else:\n",
+    "        curr = BinaryTreeNode(root1.val + root2.val)\n",
+    "        curr.left = mergeTrees(root1.left, root2.left)\n",
+    "        curr.right = mergeTrees(root1.right, root2.right)\n",
+    "        return curr\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert mergeTrees(BinaryTreeNode.from_array([1,3,2,5]), BinaryTreeNode.from_array([2,1,3,None,4,None,7])).to_list() == [3,4,5,5,4,None,7]"
    ]
   }
  ],
