--- a/study/striver-A2Z/11-binary-search-trees.ipynb
+++ b/study/striver-A2Z/11-binary-search-trees.ipynb
@@ -1168,6 +1168,7 @@
      "iopub.status.idle": "2024-04-19T15:53:11.399100Z",
      "shell.execute_reply": "2024-04-19T15:53:11.398470Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.020258,
      "end_time": "2024-04-19T15:53:11.400803",
@@ -1231,6 +1232,160 @@
     "# Testing the solution\n",
     "assert findTarget(BinaryTreeNode.from_array([5,3,6,2,4,None,7]), 10) == True\n",
     "assert findTarget(BinaryTreeNode.from_array([1]), 2) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "db9c51ed",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/ZWGW7FminDM?si=fA6cUWtX4QjfjP6R\n",
+    "Recover BST"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "d03db7ee",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def recoverTree(root: BinaryTreeNode) -> None:\n",
+    "    \"\"\"\n",
+    "    Do an inorder traversal, mark violating nodes (curr < prev)\n",
+    "    If two matches found, swap and break. (Non adjacent swaps: [1, 3, 2, 4, 5])\n",
+    "    Else swap first match with next node. (Adjacent swaps: [1, 4, 3, 2, 5])\n",
+    "\n",
+    "    Time: O(N), Space: O(H)\n",
+    "    \"\"\"\n",
+    "    stack: list[BinaryTreeNode] = []\n",
+    "    prev: BinaryTreeNode|None = None\n",
+    "    curr: BinaryTreeNode|None = root\n",
+    "    first: BinaryTreeNode|None = None\n",
+    "    middle: BinaryTreeNode|None = None\n",
+    "    while curr or stack:\n",
+    "        if curr:\n",
+    "            stack.append(curr)\n",
+    "            curr = curr.left\n",
+    "        else:\n",
+    "            curr = stack.pop()\n",
+    "            if prev and curr.val < prev.val:\n",
+    "                if not first: # First violation\n",
+    "                    first = prev\n",
+    "                    middle = curr\n",
+    "\n",
+    "                else: # Second violation\n",
+    "                    first.val, curr.val = curr.val, first.val\n",
+    "                    break\n",
+    "\n",
+    "            prev = curr\n",
+    "            curr = curr.right\n",
+    "\n",
+    "    else: # Second violation not found\n",
+    "        if first and middle:\n",
+    "            first.val, middle.val = middle.val, first.val\n",
+    "\n",
+    "# Testing the solution\n",
+    "temp = BinaryTreeNode.from_array([1,3,None,None,2])\n",
+    "recoverTree(temp)\n",
+    "assert temp.to_list() == [3,1,None,None,2]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac910fc7",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/X0oXMdtUDwo?si=z3aO6Q8fi6awJ9Th\n",
+    "Largest BST in Binary Tree"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f808ec64",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def largestBSTBrute(root: BinaryTreeNode) -> int:\n",
+    "    def isValid(curr: BinaryTreeNode, min_: float = -math.inf, max_: float = math.inf) -> int:\n",
+    "        if not curr:\n",
+    "            return 0\n",
+    "        else:\n",
+    "            left = isValid(curr.left, min_, curr.val)\n",
+    "            right = isValid(curr.right, curr.val, max_)\n",
+    "            if min_ < curr.val < max_ and left != -1 and right != -1:\n",
+    "                return 1 + left + right\n",
+    "            else:\n",
+    "                return -1\n",
+    "\n",
+    "    # Do a level order traversal\n",
+    "    queue: list[BinaryTreeNode] = [root]\n",
+    "    result: int = -1\n",
+    "    while queue:\n",
+    "        next_: list[BinaryTreeNode] = []\n",
+    "        for curr in queue:\n",
+    "            if curr:\n",
+    "                result = max(result, isValid(curr))\n",
+    "                next_.append(curr.left)\n",
+    "                next_.append(curr.right)\n",
+    "\n",
+    "        queue = next_\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert largestBSTBrute(BinaryTreeNode.from_array([5,2,4,1,3,None,None])) == 3"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4a705ce6",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def largestBST(root: BinaryTreeNode) -> float:\n",
+    "    \"\"\"\n",
+    "    Do a post order traversal, returning size, min, max.\n",
+    "\n",
+    "    - Curr is valid if maximum on left < curr < minimum on right.\n",
+    "    - Size: 1 + left_size + right_size\n",
+    "\n",
+    "    If child is not a valid BST, parent is not a valid BST as well.\n",
+    "\n",
+    "    Time: O(N), Space: O(H)\n",
+    "    \"\"\"\n",
+    "\n",
+    "    largest = -math.inf\n",
+    "    def postOrder(curr: BinaryTreeNode) -> tuple[int, float, float]:\n",
+    "        if not curr:\n",
+    "            return 0, math.inf, -math.inf\n",
+    "        else:\n",
+    "\n",
+    "            left = postOrder(curr.left)\n",
+    "            right = postOrder(curr.right)\n",
+    "\n",
+    "            # If valid BST\n",
+    "            if left[0] != -1 and right[0] != - 1 and left[2] < curr.val < right[1]:\n",
+    "                nonlocal largest\n",
+    "                largest = max(largest, 1 + left[0] + right[0])\n",
+    "                return 1 + left[0] + right[0], min(curr.val, left[1], right[1]), max(curr.val, left[2], right[2])\n",
+    "\n",
+    "            # If invalid BST, upper recursive calls should fail as well. Use size = -1 as indicator\n",
+    "            else:\n",
+    "                return -1, 0, 0\n",
+    "\n",
+    "    postOrder(root)\n",
+    "    return largest\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert largestBST(BinaryTreeNode.from_array([5,2,4,1,3,None,None])) == 3\n",
+    "largestBST(BinaryTreeNode.from_array([20,15,40,14,18,30,60,None,17,16,19,None,None,50]))"
    ]
   }
  ],
