--- a/practice/001.ipynb
+++ b/practice/001.ipynb
@@ -4609,6 +4609,7 @@
      "iopub.status.idle": "2024-04-20T14:34:40.633658Z",
      "shell.execute_reply": "2024-04-20T14:34:40.632871Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.04003,
      "end_time": "2024-04-20T14:34:40.635420",
@@ -4633,6 +4634,53 @@
     "\n",
     "# Testing the solution\n",
     "assert mergeTrees(BinaryTreeNode.from_array([1,3,2,5]), BinaryTreeNode.from_array([2,1,3,None,4,None,7])).to_list() == [3,4,5,5,4,None,7]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1dcb94b1",
+   "metadata": {},
+   "source": [
+    "LC Easy: Find if path exists in Graph\n",
+    "https://leetcode.com/problems/find-if-path-exists-in-graph/submissions/1238132630"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98a5c5b3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def validPath(n: int, edges: list[list[int]], source: int, destination: int) -> bool:\n",
+    "    adjl: dict[int, list[int]] = dict()\n",
+    "\n",
+    "    def DFS(src: int) -> bool:\n",
+    "        if src == destination:\n",
+    "            return True\n",
+    "\n",
+    "        elif src not in visited:\n",
+    "            visited.add(src)\n",
+    "            for next_ in adjl.get(src, []):\n",
+    "                if DFS(next_):\n",
+    "                    return True\n",
+    "\n",
+    "        return False\n",
+    "\n",
+    "    # Convert to Adjancency list\n",
+    "    for n1, n2 in edges:\n",
+    "        n1_neighbours, n2_neighbours = adjl.get(n1, []), adjl.get(n2, [])\n",
+    "        n1_neighbours.append(n2)\n",
+    "        n2_neighbours.append(n1)\n",
+    "        adjl[n1], adjl[n2] = n1_neighbours, n2_neighbours\n",
+    "\n",
+    "    # Do a DFS to check if reachable\n",
+    "    visited: set[int] = set()\n",
+    "    return DFS(source)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert validPath(3, [[0,1],[1,2],[2,0]], 0, 2) == True\n",
+    "assert validPath(6, [[0,1],[0,2],[3,5],[5,4],[4,3]], 0, 5) == False"
    ]
   }
  ],
