--- a/study/striver-A2Z/12-graphs.ipynb
+++ b/study/striver-A2Z/12-graphs.ipynb
@@ -412,6 +412,7 @@
      "iopub.status.idle": "2024-04-20T14:34:45.602162Z",
      "shell.execute_reply": "2024-04-20T14:34:45.601491Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.014173,
      "end_time": "2024-04-20T14:34:45.603961",
@@ -441,6 +442,405 @@
     "\n",
     "# Testing the solution\n",
     "assert floodFill([[1,1,1],[1,1,0],[1,0,1]], 1, 1, 2) == [[2,2,2],[2,2,0],[2,0,1]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "cb576964",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/yf3oUhkvqA0?si=A664tpMiA00GrxJV\n",
+    "Rotten Oranges: https://leetcode.com/problems/rotting-oranges/submissions/1237760285"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8b72ec9b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def orangesRotting(grid: list[list[int]]) -> int:\n",
+    "    \"\"\"\n",
+    "    BFS function can be optimized by using a queue. Each element is (i, j, time).\n",
+    "    Further more instead of storing all fresh indices as a set, we can simply have a counter and decrement it every time we rot an orange.\n",
+    "    Simple check if this counter is 0 before returning minutes.\n",
+    "\n",
+    "    Time: O(M x N), Space: O(M x N)\n",
+    "    \"\"\"\n",
+    "    N, M = len(grid), len(grid[0])\n",
+    "\n",
+    "    rotten: list[tuple[int, int]] = []\n",
+    "    def BFS() -> int:\n",
+    "        nonlocal rotten\n",
+    "        min_: int = 0\n",
+    "        while rotten:\n",
+    "            newly_rotten = False\n",
+    "            next_: list[tuple[int, int]] = []\n",
+    "            for i_, j_ in rotten:\n",
+    "                if 0 <= i_ < N and 0 <= j_ < M and grid[i_][j_] == 1:\n",
+    "                    grid[i_][j_] = 2\n",
+    "                    fresh.remove((i_, j_))\n",
+    "                    next_.extend([(i_ - 1, j_), (i_, j_ - 1), (i_, j_ + 1), (i_ + 1, j_)])\n",
+    "                    newly_rotten = True\n",
+    "\n",
+    "            min_ += int(newly_rotten)\n",
+    "            rotten = next_\n",
+    "\n",
+    "        return min_\n",
+    "\n",
+    "    fresh: set[tuple[int, int]] = set()\n",
+    "    for i in range(N):\n",
+    "        for j in range(M):\n",
+    "            if grid[i][j] == 1:\n",
+    "                fresh.add((i, j))\n",
+    "            if grid[i][j] == 2:\n",
+    "                grid[i][j] = 2\n",
+    "                rotten.extend([(i - 1, j), (i, j - 1), (i, j + 1), (i + 1, j)])\n",
+    "\n",
+    "    minutes = BFS()\n",
+    "    return minutes if not fresh else -1\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert orangesRotting([[2,1,1],[1,1,0],[0,1,1]]) == 4\n",
+    "assert orangesRotting([[2,1,1],[0,1,1],[1,0,1]]) == -1\n",
+    "assert orangesRotting([[2,1,1],[1,1,1],[0,1,2]]) == 2"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "eef4c409",
+   "metadata": {},
+   "source": [
+    "Detect cycle with Graph (BFS / DFS)\n",
+    "Video Link BFS: https://youtu.be/BPlrALf1LDU?si=U9u9H_9xiHo8oflx\n",
+    "Video Link DFS: https://youtu.be/zQ3zgFypzX4?si=trbPI1I4DfRMcrj5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "342b6f3b",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def detectCycleBFS(V: int, E: int, edges: list[tuple[int, int]]):\n",
+    "    \"\"\"\n",
+    "    BFS:\n",
+    "\n",
+    "    Starting at node i we branch outwards. If some node is visited again and that node didn't come from curr node then we have a cycle\n",
+    "    We check if the next node comes from curr by storing the parent in the queue.\n",
+    "\n",
+    "    We can save duplicate work for disconnected components by storing visited outside of the BFS function. Remember to add the parent != -1 condition.\n",
+    "\n",
+    "    Time: O(N), Space: O(N)\n",
+    "\n",
+    "    DFS:\n",
+    "\n",
+    "    Starting at node i, if we are able to reach node i again via DFS, then the graph has a cycle.\n",
+    "    To make sure we don't visit the parent again, we store the parent node in the stack.\n",
+    "\n",
+    "    Time: O(N), Space: O(N)\n",
+    "    \"\"\"\n",
+    "    adjl: dict[int, list[int]] = dict()\n",
+    "    for n1, n2 in edges:\n",
+    "        n1_neighbours, n2_neighbours = adjl.get(n1, []), adjl.get(n2, [])\n",
+    "        n1_neighbours.append(n2)\n",
+    "        n2_neighbours.append(n1)\n",
+    "        adjl[n1], adjl[n2] = n1_neighbours, n2_neighbours\n",
+    "\n",
+    "    def BFS(root: int) -> bool:\n",
+    "        queue: collections.deque = collections.deque([(root, -1)])\n",
+    "        while queue:\n",
+    "            curr, parent = queue.popleft()\n",
+    "            visited.add(curr)\n",
+    "            for next_ in adjl.get(curr, []):\n",
+    "                if next_ not in visited:\n",
+    "                    queue.append((next_, curr))\n",
+    "                elif parent != -1 and next_ != parent:\n",
+    "                    return True\n",
+    "        else:\n",
+    "            return False\n",
+    "\n",
+    "    def DFS(root: int) -> bool:\n",
+    "        stack: list[tuple[int, int]] = [(root, -1)]\n",
+    "        while stack:\n",
+    "            curr, parent = stack.pop()\n",
+    "            if curr not in visited:\n",
+    "                visited.add(curr)\n",
+    "                for next_ in adjl.get(curr, []):\n",
+    "                    if next_ != parent:\n",
+    "                        stack.append((next_, curr))\n",
+    "\n",
+    "            elif parent != -1:\n",
+    "                return True\n",
+    "\n",
+    "        return False\n",
+    "\n",
+    "    visited: set[int] = set()\n",
+    "    for curr in range(V):\n",
+    "        if BFS(curr):\n",
+    "            return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "assert detectCycleBFS(5, 3, [(0, 1), (1, 2), (3, 4)]) == False\n",
+    "assert detectCycleBFS(4, 4, [(0, 1), (1, 2), (2, 3), (3, 0)]) == True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "86e956f5",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/edXdVwkYHF8?si=oTave6oul5GbDHrn\n",
+    "01 Matrix: https://leetcode.com/problems/01-matrix/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "14c07211",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def updateMatrixBrute(mat: list[list[int]]) -> list[list[int]]:\n",
+    "    M, N = len(mat), len(mat[0])\n",
+    "    result: list[list[int]] = [[-1 for i in range(N)] for j in range(M)]\n",
+    "\n",
+    "    def BFS(row: int, col: int) -> int:\n",
+    "        queue: collections.deque = collections.deque([(row, col, 0)])\n",
+    "        visited: set[tuple[int, int]] = set()\n",
+    "        while queue:\n",
+    "            i, j, dist = queue.popleft()\n",
+    "            if (i, j) not in visited and 0 <= i < M and 0 <= j < N:\n",
+    "                visited.add((i, j))\n",
+    "                if mat[i][j] == 0:\n",
+    "                    return dist\n",
+    "                else:\n",
+    "                    queue.extend([(i - 1, j, dist + 1), (i, j - 1, dist + 1), (i, j + 1, dist + 1), (i + 1, j, dist + 1)])\n",
+    "\n",
+    "        return -1\n",
+    "\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            result[i][j] = BFS(i, j)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert updateMatrixBrute([[0,0,0],[0,1,0],[0,0,0]]) == [[0,0,0],[0,1,0],[0,0,0]]\n",
+    "assert updateMatrixBrute([[0,0,0],[0,1,0],[1,1,1]]) == [[0,0,0],[0,1,0],[1,2,1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "251805ef",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/01-matrix/submissions/1238008344\n",
+    "def updateMatrixBetter(mat: list[list[int]]) -> list[list[float]]:\n",
+    "    M, N = len(mat), len(mat[0])\n",
+    "    result: list[list[float]] = [[math.inf for j in range(N)] for i in range(M)]\n",
+    "\n",
+    "    # Go right to left to find the nearest 0 on the right\n",
+    "    for i in range(M):\n",
+    "        for j in range(N - 1, -1, -1):\n",
+    "            if mat[i][j] == 0:\n",
+    "                result[i][j] = 0\n",
+    "            else:\n",
+    "                dist = result[i][j + 1] + 1 if j < N - 1 else math.inf\n",
+    "                result[i][j] = min(dist, result[i][j])\n",
+    "\n",
+    "    # Go left to right to find the nearest 0 on the left\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            if mat[i][j] == 0:\n",
+    "                result[i][j] = 0\n",
+    "            else:\n",
+    "                dist = result[i][j - 1] + 1 if j > 0 else math.inf\n",
+    "                result[i][j] = min(dist, result[i][j])\n",
+    "\n",
+    "    # Go top to bottom to find the nearest 0 on the top\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            if mat[i][j] == 0:\n",
+    "                result[i][j] = 0\n",
+    "            else:\n",
+    "                dist = result[i - 1][j] + 1 if i > 0 else math.inf\n",
+    "                result[i][j] = min(dist, result[i][j])\n",
+    "\n",
+    "    # Go bottom to top to find the nearest 0 on the bottom\n",
+    "    for i in range(M - 1, -1, -1):\n",
+    "        for j in range(N):\n",
+    "            if mat[i][j] == 0:\n",
+    "                result[i][j] = 0\n",
+    "            else:\n",
+    "                dist = result[i + 1][j] + 1 if i < M - 1 else math.inf\n",
+    "                result[i][j] = min(dist, result[i][j])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert updateMatrixBetter([[0,0,0],[0,1,0],[0,0,0]]) == [[0,0,0],[0,1,0],[0,0,0]]\n",
+    "assert updateMatrixBetter([[0,0,0],[0,1,0],[1,1,1]]) == [[0,0,0],[0,1,0],[1,2,1]]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9469ade5",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/01-matrix/submissions/1238019317/\n",
+    "def updateMatrix(mat: list[list[int]]) -> list[list[float]]:\n",
+    "    \"\"\"Time: O(M x N), Space: O(M x N)\"\"\"\n",
+    "\n",
+    "    M, N = len(mat), len(mat[0])\n",
+    "    result: list[list[float]] = [[math.inf for j in range(N)] for i in range(M)]\n",
+    "\n",
+    "    # Collect all nodes that are having 0 values: i, j, dist\n",
+    "    queue: collections.deque = collections.deque()\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            if mat[i][j] == 0:\n",
+    "                queue.append((i, j, 0))\n",
+    "\n",
+    "    # Start to traverse BFS together\n",
+    "    visited: set[tuple[int, int]] = set()\n",
+    "    while queue:\n",
+    "        i, j, dist = queue.popleft()\n",
+    "        if 0 <= i < M and 0 <= j < N and (i, j) not in visited:\n",
+    "            result[i][j] = dist\n",
+    "            visited.add((i, j))\n",
+    "            queue.extend([(i - 1, j, dist + 1), (i, j - 1, dist + 1), (i, j + 1, dist + 1), (i + 1, j, dist + 1)])\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert updateMatrix([[0,0,0],[0,1,0],[0,0,0]]) == [[0,0,0],[0,1,0],[0,0,0]]\n",
+    "assert updateMatrix([[0,0,0],[0,1,0],[1,1,1]]) == [[0,0,0],[0,1,0],[1,2,1]]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b3a1d29",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/BtdgAys4yMk?si=BLc-UXXR9XvQV8Mf\n",
+    "Surrounded Regions: https://leetcode.com/problems/surrounded-regions/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3610e726",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/surrounded-regions/submissions/1238092752\n",
+    "def solve(board: list[list[str]]) -> None:\n",
+    "    \"Time: O(M x N), Time: O(M x N)\"\n",
+    "    M, N = len(board), len(board[0])\n",
+    "\n",
+    "    stack: list[tuple[int, int]] = []\n",
+    "    visited: set[tuple[int, int]] = set()\n",
+    "\n",
+    "    # Capture all zeros at the borders\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            if (i in (0, M - 1) or j in (0, N - 1)) and board[i][j] == \"O\":\n",
+    "                stack.append((i, j))\n",
+    "\n",
+    "    # Do a DFS and mark zeros into visited\n",
+    "    while stack:\n",
+    "        i, j = stack.pop()\n",
+    "        visited.add((i, j))\n",
+    "        for x, y in [(-1, 0), (0, -1), (0, 1), (1, 0)]:\n",
+    "            row, col = i + x, j + y\n",
+    "            if 0 <= row < M and 0 <= col < N and board[row][col] == 'O' and (row, col) not in visited:\n",
+    "                stack.append((row, col))\n",
+    "\n",
+    "    # Visited set contains all 'O' adjacent to 'O's that cannot be flipped\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            if (i, j) not in visited:\n",
+    "                board[i][j] = \"X\"\n",
+    "\n",
+    "# Testing the solution\n",
+    "for inp, op in [\n",
+    "    (\n",
+    "        [[\"X\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"O\",\"X\"],[\"X\",\"X\",\"O\",\"X\"],[\"X\",\"O\",\"X\",\"X\"]],\n",
+    "        [[\"X\",\"X\",\"X\",\"X\"],[\"X\",\"X\",\"X\",\"X\"],[\"X\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"X\",\"X\"]]\n",
+    "    ),\n",
+    "    (\n",
+    "        [[\"X\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"O\",\"X\"],[\"X\",\"X\",\"O\",\"X\"],[\"X\",\"X\",\"O\",\"X\"]],\n",
+    "        [[\"X\",\"X\",\"X\",\"X\"],[\"X\",\"O\",\"O\",\"X\"],[\"X\",\"X\",\"O\",\"X\"],[\"X\",\"X\",\"O\",\"X\"]]\n",
+    "    )\n",
+    "]:\n",
+    "    solve(inp)\n",
+    "    assert inp == op"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "0b264d5d",
+   "metadata": {},
+   "source": [
+    "Number of Enclaves\n",
+    "Video Link: https://youtu.be/7zmgQSJghpo?si=XSGlRuO_V105V2XK"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5647a7a1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/number-of-enclaves/submissions/1238117024\n",
+    "def numEnclaves(grid: list[list[int]]) -> int:\n",
+    "    \"Time: O(M x N), Space: O(M x N) recursion stack space\"\n",
+    "    M, N = len(grid), len(grid[0])\n",
+    "\n",
+    "    def DFS(row: int, col: int):\n",
+    "        grid[row][col] = 0\n",
+    "        for x, y in [(-1, 0), (0, -1), (0, 1), (1, 0)]:\n",
+    "            i_, j_ = row + x, col + y\n",
+    "            if 0 <= i_ < M and 0 <= j_ < N and grid[i_][j_] == 1:\n",
+    "                DFS(i_, j_)\n",
+    "\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            if (i in (0, M - 1) or j in (0, N - 1)) and grid[i][j] == 1:\n",
+    "                DFS(i, j)\n",
+    "\n",
+    "    enclaves = 0\n",
+    "    for i in range(M):\n",
+    "        for j in range(N):\n",
+    "            if grid[i][j] == 1:\n",
+    "                enclaves += 1\n",
+    "\n",
+    "    return enclaves\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert numEnclaves([[0,0,0,0],[1,0,1,0],[0,1,1,0],[0,0,0,0]]) == 3\n",
+    "assert numEnclaves([[0,1,1,0],[0,0,1,0],[0,0,1,0],[0,0,0,0]]) == 0"
    ]
   }
  ],
