--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -36,6 +36,7 @@
     "import string\n",
     "import tqdm\n",
     "import bisect\n",
+    "import heapq\n",
     "\n",
     "conn = sqlite3.connect(\":memory:\")\n",
     "\n",
@@ -321,6 +322,7 @@
      "iopub.status.idle": "2024-04-21T15:47:35.392985Z",
      "shell.execute_reply": "2024-04-21T15:47:35.392244Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.010432,
      "end_time": "2024-04-21T15:47:35.394801",
@@ -341,6 +343,59 @@
     "            maxE = exp, 0\n",
     "\n",
     "    return maxE[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6b67334f",
+   "metadata": {},
+   "source": [
+    "Codeforces: 20/C (Dijkstra)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a165d425",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def dijkstra(src: int, adjl: dict[int, list[tuple[int, int]]]) -> dict[int, tuple[float, int]]:\n",
+    "    heap: list[tuple[int, int, int]] = [(1, src, 1)]\n",
+    "    shortest: dict[int, tuple[float, int]] = dict()\n",
+    "    while heap:\n",
+    "        curr_dist, curr, prev = heapq.heappop(heap)\n",
+    "        if curr not in shortest or curr_dist < shortest[curr][0]:\n",
+    "            shortest[curr] = (curr_dist, prev)\n",
+    "            for next_, next_dist in adjl.get(curr, []):\n",
+    "                heapq.heappush(heap, (curr_dist + next_dist, next_, curr))\n",
+    "\n",
+    "    return shortest\n",
+    "\n",
+    "def twentyC(V: int, E: int, edges: list[tuple[int, int, int]]) -> str:\n",
+    "    adjl: dict[int, list[tuple[int, int]]] = dict()\n",
+    "    for n1, n2, d in edges:\n",
+    "        n1_neighbours, n2_neighbours = adjl.get(n1, []), adjl.get(n2, [])\n",
+    "        n1_neighbours.append((n2, d))\n",
+    "        n2_neighbours.append((n1, d))\n",
+    "        adjl[n1], adjl[n2] = n1_neighbours, n2_neighbours\n",
+    "\n",
+    "    paths = dijkstra(1, adjl)\n",
+    "    if V in paths:\n",
+    "        result: list[int] = [V]\n",
+    "        curr = V\n",
+    "        while curr != 1:\n",
+    "            dist, prev = paths[curr]\n",
+    "            result.append(prev)\n",
+    "            curr = prev\n",
+    "\n",
+    "        result.reverse()\n",
+    "        return ' '.join(map(str, result))\n",
+    "    else:\n",
+    "        return '-1'\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert twentyC(5, 5, [(1, 2, 2), (2, 5, 5), (2, 3, 4), (1, 4, 1), (4, 3, 3), (3, 5, 1)]) == '1 4 3 5'"
    ]
   }
  ],
