--- a/study/striver-A2Z/12-graphs.ipynb
+++ b/study/striver-A2Z/12-graphs.ipynb
@@ -32,6 +32,7 @@
    "cell_type": "markdown",
    "id": "cf960c9a",
    "metadata": {
+    "lines_to_next_cell": 0,
     "papermill": {
      "duration": 0.005629,
      "end_time": "2024-04-21T15:47:37.202222",
@@ -70,6 +71,18 @@
     " 3: [(2, 2), (4, 1)]\n",
     "}\n",
     "```"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d7ecd5e5",
+   "metadata": {},
+   "source": [
+    "#### Misc about graphs\n",
+    "- Bipartite Graph: Color the graph with 2 colors such that no adjacent nodes have the same color. More formally: A graph is bipartite if the nodes can be partitioned into two independent sets A and B such that every edge in the graph connects a node in set A and a node in set B.\n",
+    "- Linear graphs without any cycles are always bipartite.\n",
+    "- Cyclic graphs of even node length are always bipartite.\n",
+    "- Cyclic graphs of odd node length are NOT bipartite."
    ]
   },
   {
@@ -574,7 +587,7 @@
    },
    "outputs": [],
    "source": [
-    "def detectCycleBFS(V: int, E: int, edges: list[tuple[int, int]]):\n",
+    "def detectCycle(V: int, E: int, edges: list[tuple[int, int]]):\n",
     "    \"\"\"\n",
     "    BFS:\n",
     "\n",
@@ -629,13 +642,13 @@
     "\n",
     "    visited: set[int] = set()\n",
     "    for curr in range(V):\n",
-    "        if BFS(curr):\n",
+    "        if DFS(curr):\n",
     "            return True\n",
     "    else:\n",
     "        return False\n",
     "\n",
-    "assert detectCycleBFS(5, 3, [(0, 1), (1, 2), (3, 4)]) == False\n",
-    "assert detectCycleBFS(4, 4, [(0, 1), (1, 2), (2, 3), (3, 0)]) == True"
+    "assert detectCycle(5, 3, [(0, 1), (1, 2), (3, 4)]) == False\n",
+    "assert detectCycle(4, 4, [(0, 1), (1, 2), (2, 3), (3, 0)]) == True"
    ]
   },
   {
@@ -946,6 +959,7 @@
      "iopub.status.idle": "2024-04-21T15:47:37.652063Z",
      "shell.execute_reply": "2024-04-21T15:47:37.651329Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.017529,
      "end_time": "2024-04-21T15:47:37.653841",
@@ -985,6 +999,114 @@
     "# Testing the solution\n",
     "assert numEnclaves([[0,0,0,0],[1,0,1,0],[0,1,1,0],[0,0,0,0]]) == 3\n",
     "assert numEnclaves([[0,1,1,0],[0,0,1,0],[0,0,1,0],[0,0,0,0]]) == 0"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "83ddc4a6",
+   "metadata": {},
+   "source": [
+    "Video link: https://youtu.be/7zmgQSJghpo?si=VR9VnvBwe-esRaau\n",
+    "Distinct Islands"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "77dd14f8",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def distinctIsland(arr: list[list[int]], N: int, M: int) :\n",
+    "    \"Time: O(M x N), Space: O(M x N)\"\n",
+    "\n",
+    "    islands: set[tuple[tuple[int, int], ...]] = set()\n",
+    "    visited: set[tuple[int, int]] = set()\n",
+    "\n",
+    "    def BFS(row: int, col: int) -> tuple[tuple[int, int], ...]:\n",
+    "        # Time: O(M x N)\n",
+    "        queue: collections.deque = collections.deque([(row, col)])\n",
+    "        island: list[tuple[int, int]] = []\n",
+    "        while queue:\n",
+    "            i, j = queue.popleft()\n",
+    "            if 0 <= i < N and 0 <= j < M and (i, j) not in visited and arr[i][j] == 1:\n",
+    "                visited.add((i, j))\n",
+    "                island.append((i - row, j - col))\n",
+    "                queue.extend([(i - 1, j), (i, j - 1), (i, j + 1), (i + 1, j)])\n",
+    "\n",
+    "        return tuple(island)\n",
+    "\n",
+    "    for i in range(N):\n",
+    "        for j in range(M):\n",
+    "            if arr[i][j] == 1:\n",
+    "                island: tuple[tuple[int, int], ...] = BFS(i, j)\n",
+    "                if island:\n",
+    "                    islands.add(island)\n",
+    "\n",
+    "    return len(islands)\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert distinctIsland([[1, 1, 0, 0, 0], [1, 1, 0, 0, 0], [0, 0, 0, 1, 1], [0, 0, 0, 1, 1]], 4, 5) == 1\n",
+    "assert distinctIsland([[1, 1, 0, 1, 1], [1, 0, 0, 0, 0], [0, 0, 0, 0, 1], [1, 1, 0, 1, 1]], 4, 5) == 3"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "f49a3367",
+   "metadata": {},
+   "source": [
+    "Video Link: https://youtu.be/-vu34sct1g8?si=H2DEd5HB-B6oAU4p\n",
+    "Bipartite Graph (BFS): https://leetcode.com/problems/is-graph-bipartite/description/"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8584fbc4",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def isBipartite(graph: list[list[int]]) -> bool:\n",
+    "    \"Time: O(N), Space: O(N)\"\n",
+    "    visited: dict[int, bool] = dict()\n",
+    "    def checkBipartiteBFS(root: int) -> bool:\n",
+    "        # https://leetcode.com/problems/is-graph-bipartite/submissions/1238665067\n",
+    "        queue: collections.deque = collections.deque([(root, True)])\n",
+    "        while queue:\n",
+    "            curr, color = queue.popleft()\n",
+    "            if curr not in visited:\n",
+    "                visited[curr] = color\n",
+    "                for next_ in graph[curr]:\n",
+    "                    queue.append((next_, not color))\n",
+    "            elif color != visited[curr]:\n",
+    "                return False\n",
+    "        return True\n",
+    "\n",
+    "    def checkBipartiteDFS(root: int) -> bool:\n",
+    "        # https://leetcode.com/problems/is-graph-bipartite/submissions/1238671846/\n",
+    "        stack: list[tuple[int, bool]] = [(root, True)]\n",
+    "        while stack:\n",
+    "            curr, color = stack.pop()\n",
+    "            if curr not in visited:\n",
+    "                visited[curr] = color\n",
+    "                for next_ in graph[curr]:\n",
+    "                    stack.append((next_, not color))\n",
+    "            elif color != visited[curr]:\n",
+    "                return False\n",
+    "\n",
+    "        return True\n",
+    "\n",
+    "    for curr in range(len(graph)):\n",
+    "        if curr not in visited and not checkBipartiteDFS(curr):\n",
+    "            return False\n",
+    "\n",
+    "    return True\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isBipartite([[1,2,3],[0,2],[0,1,3],[0,2]]) == False\n",
+    "assert isBipartite([[1,3],[0,2],[1,3],[0,2]]) == True"
    ]
   }
  ],
