--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -373,6 +373,7 @@
      "iopub.status.idle": "2024-04-22T17:22:03.470530Z",
      "shell.execute_reply": "2024-04-22T17:22:03.469758Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.017106,
      "end_time": "2024-04-22T17:22:03.472100",
@@ -420,6 +421,71 @@
     "\n",
     "# Testing the solution\n",
     "assert twentyC(5, 5, [(1, 2, 2), (2, 5, 5), (2, 3, 4), (1, 4, 1), (4, 3, 3), (3, 5, 1)]) == '1 4 3 5'"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a4263f01",
+   "metadata": {},
+   "source": [
+    "LC Medium: Course Schedule 2"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eb152abe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/course-schedule-ii/submissions/1239496066\n",
+    "def findOrder(numCourses: int, prerequisites: list[list[int]]) -> list[int]:\n",
+    "    adjl: dict[int, list[int]] = dict()\n",
+    "    for c1, c2 in prerequisites:\n",
+    "        # To take up C1, C2 must be done already\n",
+    "        c1_neighbours: list[int] = adjl.get(c1, [])\n",
+    "        c1_neighbours.append(c2)\n",
+    "        adjl[c1] = c1_neighbours\n",
+    "\n",
+    "    paths: dict[int, list[int]] = dict()\n",
+    "    def getOrdering(curr: int, visited: set[int] = set()) -> list[int]:\n",
+    "        if curr in paths:\n",
+    "            return paths[curr]\n",
+    "        elif curr in visited:\n",
+    "            return []\n",
+    "        else:\n",
+    "            result: list[int] = [curr]\n",
+    "            visited.add(curr)\n",
+    "            for next_ in adjl.get(curr, []):\n",
+    "                deps: list[int] = getOrdering(next_, visited)\n",
+    "                if not deps:\n",
+    "                    return []\n",
+    "                else:\n",
+    "                    result.extend(deps)\n",
+    "\n",
+    "            visited.remove(curr)\n",
+    "            paths[curr] = result\n",
+    "            return result\n",
+    "\n",
+    "    # Courses are ordered from 0 to numCourses - 1\n",
+    "    result: list[int] = []\n",
+    "    completed: set[int] = set()\n",
+    "    for course in range(numCourses):\n",
+    "        deps = getOrdering(course)\n",
+    "        deps.reverse()\n",
+    "        if not deps:\n",
+    "            return []\n",
+    "        else:\n",
+    "            for dep in deps:\n",
+    "                if dep not in completed:\n",
+    "                    completed.add(dep)\n",
+    "                    result.append(dep)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert findOrder(4, [[1,0], [2,0], [3,1], [3,2]]) in ([0,1,2,3], [0,2,1,3])\n",
+    "assert findOrder(5, [[1,0], [2,0], [3,4], [4,3]]) == []"
    ]
   }
  ],
