--- a/study/striver-A2Z/12-graphs.ipynb
+++ b/study/striver-A2Z/12-graphs.ipynb
@@ -1113,6 +1113,7 @@
      "iopub.status.idle": "2024-04-22T17:22:05.879877Z",
      "shell.execute_reply": "2024-04-22T17:22:05.879212Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.019151,
      "end_time": "2024-04-22T17:22:05.881507",
@@ -1163,6 +1164,105 @@
     "# Testing the solution\n",
     "assert isBipartite([[1,2,3],[0,2],[0,1,3],[0,2]]) == False\n",
     "assert isBipartite([[1,3],[0,2],[1,3],[0,2]]) == True"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b8c8a001",
+   "metadata": {},
+   "source": [
+    "Detect cycle in directed graph with DFS: https://youtu.be/9twcmtQj4DU?si=2xZsVlk1bdtLbHz5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f1cf48b4",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def isCyclicDFS(V: int, E: int, edges: list[tuple[int, int]]) -> bool:\n",
+    "    adjl: dict[int, list[int]] = dict()\n",
+    "    for n1, n2 in edges:\n",
+    "        n1_neighbours = adjl.get(n1, [])\n",
+    "        n1_neighbours.append(n2)\n",
+    "        adjl[n1] = n1_neighbours\n",
+    "\n",
+    "    def checkCycle(root: int, paths: set[int] = set()) -> bool:\n",
+    "        if root in paths:\n",
+    "            return True\n",
+    "        elif root in visited:\n",
+    "            return False\n",
+    "        else:\n",
+    "            visited.add(root)\n",
+    "            paths.add(root)\n",
+    "            for next_ in adjl.get(root, []):\n",
+    "                if checkCycle(next_, paths):\n",
+    "                    return True\n",
+    "            paths.remove(root)\n",
+    "            return False\n",
+    "\n",
+    "    visited: set[int] = set()\n",
+    "    for curr in range(V):\n",
+    "        if checkCycle(curr):\n",
+    "            return True\n",
+    "    else:\n",
+    "        return False\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert isCyclicDFS(4, 4, [(0,1), (1,2), (2,3), (3,0)]) == True\n",
+    "assert isCyclicDFS(3, 3, [(1,0), (1,2), (0,2)]) == False"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a75c6088",
+   "metadata": {},
+   "source": [
+    "Eventual Safe states (DFS): https://youtu.be/uRbJ1OF9aYM?si=8J-ujp8LUkpO887c"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e3bfb6f2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/find-eventual-safe-states/submissions/1239573858\n",
+    "def eventualSafeNodes(V: int, adj: list[list[int]]) -> list[int]:\n",
+    "\n",
+    "    # Visited - True if unsafe, False otherwise\n",
+    "    visited: dict[int, bool] = dict()\n",
+    "\n",
+    "    def checkCycle(root: int, paths: set[int] = set()) -> bool:\n",
+    "        if root in visited:\n",
+    "            return visited[root]\n",
+    "        elif root in paths:\n",
+    "            return True\n",
+    "        else:\n",
+    "            paths.add(root)\n",
+    "            for next_ in adj[root]:\n",
+    "                if checkCycle(next_, paths):\n",
+    "                    visited[root] = True\n",
+    "                    return True\n",
+    "\n",
+    "            paths.remove(root)\n",
+    "            visited[root] = False\n",
+    "            return False\n",
+    "\n",
+    "    result: list[int] = []\n",
+    "    for curr in range(V):\n",
+    "        if not checkCycle(curr):\n",
+    "            result.append(curr)\n",
+    "\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert eventualSafeNodes(7, [[1, 2], [2, 3], [5], [0], [5], [], []]) == [2, 4, 5, 6]\n",
+    "assert eventualSafeNodes(4, [[1], [2], [0,3], []]) == [3]"
    ]
   }
  ],
