Striver A2Z: Graphs Topological sort

--- a/study/striver-A2Z/12-graphs.ipynb
+++ b/study/striver-A2Z/12-graphs.ipynb
@@ -1267,6 +1267,7 @@
      "iopub.status.idle": "2024-04-23T05:02:38.467171Z",
      "shell.execute_reply": "2024-04-23T05:02:38.466513Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.020368,
      "end_time": "2024-04-23T05:02:38.468869",
@@ -1310,6 +1311,79 @@
     "# Testing the solution\n",
     "assert eventualSafeNodes(7, [[1, 2], [2, 3], [5], [0], [5], [], []]) == [2, 4, 5, 6]\n",
     "assert eventualSafeNodes(4, [[1], [2], [0,3], []]) == [3]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "e2a1e13b",
+   "metadata": {},
+   "source": [
+    "Topological sorting: https://youtu.be/5lZ0iJMrUMk?si=lSTD3o2QoGGjiwxO"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "806cdb46",
+   "metadata": {
+    "lines_to_next_cell": 1
+   },
+   "outputs": [],
+   "source": [
+    "def topologicalSortBetter(adj: dict[int, list[int]], V: int, E: int):\n",
+    "    \"Time: O((V + E) x log (V + E)), Space: O(N)\"\n",
+    "    def calcWeights(root: int) -> int:\n",
+    "        if root in weights:\n",
+    "            return weights[root]\n",
+    "        else:\n",
+    "            weight = 1\n",
+    "            for next_ in adj.get(root, []):\n",
+    "                weight += calcWeights(next_)\n",
+    "\n",
+    "            weights[root] = weight\n",
+    "            return weight\n",
+    "\n",
+    "    weights: dict[int, int] = dict()\n",
+    "    result: list[int] = []\n",
+    "    for curr in range(V):\n",
+    "        calcWeights(curr)\n",
+    "        result.append(curr)\n",
+    "\n",
+    "    result.sort(key=lambda x: weights[x], reverse=True)\n",
+    "    return result\n",
+    "\n",
+    "# Testing the solution\n",
+    "topologicalSortBetter({0: [2,4], 1: [2], 3: [1]}, 5, 4)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8365f0a8",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Much more brilliant and clean approach from Striver\n",
+    "def topologicalSort(adj: dict[int, list[int]], V: int, E: int):\n",
+    "    \"Time: O(V + E), Space: O(N)\"\n",
+    "    def backtrack(root: int):\n",
+    "        if root in visited:\n",
+    "            return\n",
+    "        else:\n",
+    "            visited.add(root)\n",
+    "            for next_ in adj.get(root, []):\n",
+    "                backtrack(next_)\n",
+    "            stack.append(root)\n",
+    "\n",
+    "    visited: set[int] = set()\n",
+    "    stack: list[int] = []\n",
+    "    for curr in range(V):\n",
+    "        backtrack(curr)\n",
+    "\n",
+    "    stack.reverse()\n",
+    "    return stack\n",
+    "\n",
+    "topologicalSort({0: [], 1: [], 2: [3], 3: [1], 4: [0,1], 5: [0,2]}, 6, 6)"
    ]
   }
  ],
