--- a/practice/002.ipynb
+++ b/practice/002.ipynb
@@ -451,6 +451,7 @@
      "iopub.status.idle": "2024-04-23T05:02:35.940775Z",
      "shell.execute_reply": "2024-04-23T05:02:35.940019Z"
     },
+    "lines_to_next_cell": 1,
     "papermill": {
      "duration": 0.018032,
      "end_time": "2024-04-23T05:02:35.942426",
@@ -510,6 +511,57 @@
     "# Testing the solution\n",
     "assert findOrder(4, [[1,0], [2,0], [3,1], [3,2]]) in ([0,1,2,3], [0,2,1,3])\n",
     "assert findOrder(5, [[1,0], [2,0], [3,4], [4,3]]) == []"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ca3a0889",
+   "metadata": {},
+   "source": [
+    "LC Medium: Course Schedule 1 (DFS)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bdeaef7f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# https://leetcode.com/problems/course-schedule/submissions/1240858033/\n",
+    "def canFinish(numCourses: int, prerequisites: list[list[int]]) -> bool:\n",
+    "    # Convert pre-req to adj list\n",
+    "    adj: dict[int, list[int]] = dict()\n",
+    "    for n1, n2 in prerequisites:\n",
+    "        n1_neighbours = adj.get(n1, [])\n",
+    "        n1_neighbours.append(n2)\n",
+    "        adj[n1] = n1_neighbours\n",
+    "\n",
+    "    # DFS Algorithm to check for cycles\n",
+    "    def hasCycle(curr: int, paths: set[int] = set()) -> bool:\n",
+    "        if curr in paths:\n",
+    "            return True\n",
+    "        elif curr in visited:\n",
+    "            return False\n",
+    "        else:\n",
+    "            visited.add(curr)\n",
+    "            paths.add(curr)\n",
+    "            for next_ in adj.get(curr, []):\n",
+    "                if hasCycle(next_, paths):\n",
+    "                    return True\n",
+    "            paths.remove(curr)\n",
+    "            return False\n",
+    "\n",
+    "    visited: set[int] = set()\n",
+    "    for curr in range(numCourses):\n",
+    "        if hasCycle(curr):\n",
+    "            return False\n",
+    "    else:\n",
+    "        return True\n",
+    "\n",
+    "# Testing the solution\n",
+    "assert canFinish(2, [[1,0]]) == True\n",
+    "assert canFinish(2, [[1,0],[0,1]]) == False"
    ]
   }
  ],
